8220341: Class redefinition fails with assert(!is_unloaded()) failed: unloaded method on the stack

Skip unloaded methods in compile queue during marking.

Reviewed-by: kvn, neliasso, eosterlund, coleenp